# EmbeddedIntentRecognizer

./: .gitignore  README.md
IntentApp/: CMakeLists.txt  IntentApp.cpp  IntentApp.h
