# CMakeList.txt : CMake project for IntentApp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("IntentApp")

# Add source to this project's executable.
add_executable (IntentApp "IntentApp.cpp" "IntentApp.h")

# TODO: Add tests and install targets if needed.
